#11942: Prop removed based on Will's comment (https://github.com/dotCMS/core/pull/11972#pullrequestreview-45821663)